# evix

./: .gitignore  .rubocop.yml  CMakeLists.txt  README.md  Rakefile  evix.gemspec
examples/: basic.rb  callbacks_order.rb  fiber_concurrency.rb  fiber_pipeline.rb  io_oneshot.rb  io_pipe.rb  recurring_timer.rb  signal_handling.rb  tcp_chat.rb  tcp_client.rb  tcp_echo.rb
ext/: Rakefile
ext/evix/: CMakeLists.txt  evix.c  evix.h  evix_epoll.c  evix_epoll.h  evix_internal.h  evix_kqueue.c  evix_kqueue.h
ext/evix_ruby/: .clangd  Makefile  evix_ruby.bundle  evix_ruby.c  extconf.rb
lib/: evix.rb
lib/evix/: ffi.rb  io.rb  tcp.rb  version.rb
src/: CMakeLists.txt
src/evix/: CMakeLists.txt  evix.c  evix.h
test/: CMakeLists.txt  test_evix_backend.c  test_evix_kqueue.c  test_evix_loop.c  test_helpers.h
test/ruby/: test_fiber.rb  test_helper.rb  test_io.rb  test_loop.rb  test_timer.rb
tests/: CMakeLists.txt  test_evix_loop.c
